@@ -83,13 +83,18 @@ class InstallerModelDiscover extends InstallerModel
 		$installer =& JInstaller::getInstance();
 		$results = $installer->discover();
 		// Get all templates, including discovered ones
-		$query = 'SELECT * FROM #__extensions';
+		$query = 'SELECT *,'
+				.' CASE WHEN CHAR_LENGTH(folder) THEN CONCAT_WS(":", folder, element) ELSE element END as elementkey'
+				.' FROM #__extensions';
 		$dbo =& JFactory::getDBO();
 		$dbo->setQuery($query);
-		$installed = $dbo->loadObjectList('element');
+		$installed = $dbo->loadObjectList('elementkey');
 		foreach($results as $result) {
 			// check if we have a match on the element
-			if (!array_key_exists($result->get('element'), $installed)) {
+			if ($result->get('type') != 'plugin' && !array_key_exists($result->get('element'), $installed)) {
+				// since the element doesn't exist, its definitely new
+				$result->store(); // put it into the table
+			} elseif($result->get('type') == 'plugin' && !array_key_exists($result->get('folder').':'.$result->get('element'), $installed)) {
 				// since the element doesn't exist, its definitely new
 				$result->store(); // put it into the table
 			} else {
